--- a/app.css
+++ b/app.css
@@ -1,7 +1,7 @@
 .img-responsive, .thumbnail a>img, .thumbnail>img {
     display: block;
     max-width: 100%;
-    height: 100%;
+    /*height: 100%;*/
 }
 
 .col-lg-4 {
